tests/root/live_route/result
Setting IPV6 to yes
0: disable


1: enable


TESTING ARGS (route allow/route deny to/from)
2: route allow 53
WARN: Checks disabled
Rule added
Rule added (v6)


3: route allow 23/tcp
WARN: Checks disabled
Rule added
Rule added (v6)


4: route allow smtp
WARN: Checks disabled
Rule added
Rule added (v6)


5: route deny proto tcp to any port 80
WARN: Checks disabled
Rule added
Rule added (v6)


6: route deny proto tcp from 10.0.0.0/8 to 192.168.0.1 port 25
WARN: Checks disabled
Rule added


7: route allow from 10.0.0.0/8
WARN: Checks disabled
Rule added


8: route allow from 172.16.0.0/12
WARN: Checks disabled
Rule added


9: route allow from 192.168.0.0/16
WARN: Checks disabled
Rule added


10: route deny proto udp from 1.2.3.4 to any port 514
WARN: Checks disabled
Rule added


11: route allow proto udp from 1.2.3.5 port 5469 to 1.2.3.4 port 5469
WARN: Checks disabled
Rule added


12: route limit 22/tcp
WARN: Checks disabled
Rule added
Skipping unsupported IPv6 'limit' rule


13: route deny proto tcp from 2001:db8::/32 to any port 25
WARN: Checks disabled
Rule added (v6)


14: route deny from 2001:db8::/32 port 26 to 2001:db8:3:4:5:6:7:8
WARN: Checks disabled
Rule added (v6)


15: status
WARN: Checks disabled
Status: active

To                         Action      From
--                         ------      ----
53                         ALLOW FWD   Anywhere
23/tcp                     ALLOW FWD   Anywhere
25/tcp                     ALLOW FWD   Anywhere
80/tcp                     DENY FWD    Anywhere
192.168.0.1 25/tcp         DENY FWD    10.0.0.0/8
Anywhere                   ALLOW FWD   10.0.0.0/8
Anywhere                   ALLOW FWD   172.16.0.0/12
Anywhere                   ALLOW FWD   192.168.0.0/16
514/udp                    DENY FWD    1.2.3.4
1.2.3.4 5469/udp           ALLOW FWD   1.2.3.5 5469/udp
22/tcp                     LIMIT FWD   Anywhere
53 (v6)                    ALLOW FWD   Anywhere (v6)
23/tcp (v6)                ALLOW FWD   Anywhere (v6)
25/tcp (v6)                ALLOW FWD   Anywhere (v6)
80/tcp (v6)                DENY FWD    Anywhere (v6)
25/tcp                     DENY FWD    2001:db8::/32
2001:db8:3:4:5:6:7:8       DENY FWD    2001:db8::/32 26



### tuple ### route:allow any 53 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 53 -j ACCEPT
-A ufw-user-forward -p udp --dport 53 -j ACCEPT
--
### tuple ### route:allow tcp 23 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 23 -j ACCEPT

### tuple ### route:allow tcp 25 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 25 -j ACCEPT

### tuple ### route:deny tcp 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 80 -j DROP

### tuple ### route:deny tcp 25 192.168.0.1 any 10.0.0.0/8 in
-A ufw-user-forward -p tcp -d 192.168.0.1 --dport 25 -s 10.0.0.0/8 -j DROP

### tuple ### route:allow any any 0.0.0.0/0 any 10.0.0.0/8 in
-A ufw-user-forward -s 10.0.0.0/8 -j ACCEPT

### tuple ### route:allow any any 0.0.0.0/0 any 172.16.0.0/12 in
-A ufw-user-forward -s 172.16.0.0/12 -j ACCEPT

### tuple ### route:allow any any 0.0.0.0/0 any 192.168.0.0/16 in
-A ufw-user-forward -s 192.168.0.0/16 -j ACCEPT

### tuple ### route:deny udp 514 0.0.0.0/0 any 1.2.3.4 in
-A ufw-user-forward -p udp --dport 514 -s 1.2.3.4 -j DROP

### tuple ### route:allow udp 5469 1.2.3.4 5469 1.2.3.5 in
-A ufw-user-forward -p udp -d 1.2.3.4 --dport 5469 -s 1.2.3.5 --sport 5469 -j ACCEPT

### tuple ### route:limit tcp 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-forward -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
### tuple ### route:allow any 53 ::/0 any ::/0 in
-A ufw6-user-forward -p tcp --dport 53 -j ACCEPT
-A ufw6-user-forward -p udp --dport 53 -j ACCEPT
--
### tuple ### route:allow tcp 23 ::/0 any ::/0 in
-A ufw6-user-forward -p tcp --dport 23 -j ACCEPT

### tuple ### route:allow tcp 25 ::/0 any ::/0 in
-A ufw6-user-forward -p tcp --dport 25 -j ACCEPT

### tuple ### route:deny tcp 80 ::/0 any ::/0 in
-A ufw6-user-forward -p tcp --dport 80 -j DROP

### tuple ### route:deny tcp 25 ::/0 any 2001:db8::/32 in
-A ufw6-user-forward -p tcp --dport 25 -s 2001:db8::/32 -j DROP

### tuple ### route:deny any any 2001:db8:3:4:5:6:7:8 26 2001:db8::/32 in
-A ufw6-user-forward -p tcp -d 2001:db8:3:4:5:6:7:8 -s 2001:db8::/32 --sport 26 -j DROP
-A ufw6-user-forward -p udp -d 2001:db8:3:4:5:6:7:8 -s 2001:db8::/32 --sport 26 -j DROP
TESTING ARGS (delete route allow/route deny to/from)
16: route delete allow 53
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


17: route delete allow 23/tcp
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


18: route delete allow smtp
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


19: route delete deny proto tcp to any port 80
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


20: route delete deny proto tcp from 10.0.0.0/8 to 192.168.0.1 port 25
WARN: Checks disabled
Rule deleted


21: route delete allow from 10.0.0.0/8
WARN: Checks disabled
Rule deleted


22: route delete allow from 172.16.0.0/12
WARN: Checks disabled
Rule deleted


23: route delete allow from 192.168.0.0/16
WARN: Checks disabled
Rule deleted


24: route delete deny proto udp from 1.2.3.4 to any port 514
WARN: Checks disabled
Rule deleted


25: route delete allow proto udp from 1.2.3.5 port 5469 to 1.2.3.4 port 5469
WARN: Checks disabled
Rule deleted


26: route delete limit 22/tcp
WARN: Checks disabled
Rule deleted
Skipping unsupported IPv6 'limit' rule


27: route delete deny proto tcp from 2001:db8::/32 to any port 25
WARN: Checks disabled
Rule deleted (v6)


28: route delete deny from 2001:db8::/32 port 26 to 2001:db8:3:4:5:6:7:8
WARN: Checks disabled
Rule deleted (v6)


29: status
WARN: Checks disabled
Status: active


Setting IPV6 to no
30: disable


31: enable


TESTING ARGS (route allow/route deny to/from)
32: route allow 53
WARN: Checks disabled
Rule added


33: route allow 23/tcp
WARN: Checks disabled
Rule added


34: route allow smtp
WARN: Checks disabled
Rule added


35: route deny proto tcp to any port 80
WARN: Checks disabled
Rule added


36: route deny proto tcp from 10.0.0.0/8 to 192.168.0.1 port 25
WARN: Checks disabled
Rule added


37: route allow from 10.0.0.0/8
WARN: Checks disabled
Rule added


38: route allow from 172.16.0.0/12
WARN: Checks disabled
Rule added


39: route allow from 192.168.0.0/16
WARN: Checks disabled
Rule added


40: route deny proto udp from 1.2.3.4 to any port 514
WARN: Checks disabled
Rule added


41: route allow proto udp from 1.2.3.5 port 5469 to 1.2.3.4 port 5469
WARN: Checks disabled
Rule added


42: route limit 22/tcp
WARN: Checks disabled
Rule added


43: status
WARN: Checks disabled
Status: active

To                         Action      From
--                         ------      ----
53                         ALLOW FWD   Anywhere
23/tcp                     ALLOW FWD   Anywhere
25/tcp                     ALLOW FWD   Anywhere
80/tcp                     DENY FWD    Anywhere
192.168.0.1 25/tcp         DENY FWD    10.0.0.0/8
Anywhere                   ALLOW FWD   10.0.0.0/8
Anywhere                   ALLOW FWD   172.16.0.0/12
Anywhere                   ALLOW FWD   192.168.0.0/16
514/udp                    DENY FWD    1.2.3.4
1.2.3.4 5469/udp           ALLOW FWD   1.2.3.5 5469/udp
22/tcp                     LIMIT FWD   Anywhere



### tuple ### route:allow any 53 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 53 -j ACCEPT
-A ufw-user-forward -p udp --dport 53 -j ACCEPT
--
### tuple ### route:allow tcp 23 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 23 -j ACCEPT

### tuple ### route:allow tcp 25 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 25 -j ACCEPT

### tuple ### route:deny tcp 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 80 -j DROP

### tuple ### route:deny tcp 25 192.168.0.1 any 10.0.0.0/8 in
-A ufw-user-forward -p tcp -d 192.168.0.1 --dport 25 -s 10.0.0.0/8 -j DROP

### tuple ### route:allow any any 0.0.0.0/0 any 10.0.0.0/8 in
-A ufw-user-forward -s 10.0.0.0/8 -j ACCEPT

### tuple ### route:allow any any 0.0.0.0/0 any 172.16.0.0/12 in
-A ufw-user-forward -s 172.16.0.0/12 -j ACCEPT

### tuple ### route:allow any any 0.0.0.0/0 any 192.168.0.0/16 in
-A ufw-user-forward -s 192.168.0.0/16 -j ACCEPT

### tuple ### route:deny udp 514 0.0.0.0/0 any 1.2.3.4 in
-A ufw-user-forward -p udp --dport 514 -s 1.2.3.4 -j DROP

### tuple ### route:allow udp 5469 1.2.3.4 5469 1.2.3.5 in
-A ufw-user-forward -p udp -d 1.2.3.4 --dport 5469 -s 1.2.3.5 --sport 5469 -j ACCEPT

### tuple ### route:limit tcp 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-forward -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
TESTING ARGS (delete route allow/route deny to/from)
44: route delete allow 53
WARN: Checks disabled
Rule deleted


45: route delete allow 23/tcp
WARN: Checks disabled
Rule deleted


46: route delete allow smtp
WARN: Checks disabled
Rule deleted


47: route delete deny proto tcp to any port 80
WARN: Checks disabled
Rule deleted


48: route delete deny proto tcp from 10.0.0.0/8 to 192.168.0.1 port 25
WARN: Checks disabled
Rule deleted


49: route delete allow from 10.0.0.0/8
WARN: Checks disabled
Rule deleted


50: route delete allow from 172.16.0.0/12
WARN: Checks disabled
Rule deleted


51: route delete allow from 192.168.0.0/16
WARN: Checks disabled
Rule deleted


52: route delete deny proto udp from 1.2.3.4 to any port 514
WARN: Checks disabled
Rule deleted


53: route delete allow proto udp from 1.2.3.5 port 5469 to 1.2.3.4 port 5469
WARN: Checks disabled
Rule deleted


54: route delete limit 22/tcp
WARN: Checks disabled
Rule deleted


55: status
WARN: Checks disabled
Status: active


Checking route reject
Setting IPV6 to yes
56: disable


57: enable


58: route reject 113
WARN: Checks disabled
Rule added
Rule added (v6)


59: route reject 114/tcp
WARN: Checks disabled
Rule added
Rule added (v6)


60: route reject 115/udp
WARN: Checks disabled
Rule added
Rule added (v6)


61: status
WARN: Checks disabled
Status: active

To                         Action      From
--                         ------      ----
113                        REJECT FWD  Anywhere
114/tcp                    REJECT FWD  Anywhere
115/udp                    REJECT FWD  Anywhere
113 (v6)                   REJECT FWD  Anywhere (v6)
114/tcp (v6)               REJECT FWD  Anywhere (v6)
115/udp (v6)               REJECT FWD  Anywhere (v6)



### tuple ### route:reject any 113 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 113 -j REJECT --reject-with tcp-reset
-A ufw-user-forward -p udp --dport 113 -j REJECT
--
### tuple ### route:reject tcp 114 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 114 -j REJECT --reject-with tcp-reset

### tuple ### route:reject udp 115 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p udp --dport 115 -j REJECT

### tuple ### route:reject any 113 ::/0 any ::/0 in
-A ufw6-user-forward -p tcp --dport 113 -j REJECT --reject-with tcp-reset
-A ufw6-user-forward -p udp --dport 113 -j REJECT
--
### tuple ### route:reject tcp 114 ::/0 any ::/0 in
-A ufw6-user-forward -p tcp --dport 114 -j REJECT --reject-with tcp-reset

### tuple ### route:reject udp 115 ::/0 any ::/0 in
-A ufw6-user-forward -p udp --dport 115 -j REJECT

62: route delete reject 113
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


63: route delete reject 114/tcp
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


64: route delete reject 115/udp
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


65: status
WARN: Checks disabled
Status: active


Setting IPV6 to no
66: disable


67: enable


68: route reject 113
WARN: Checks disabled
Rule added


69: route reject 114/tcp
WARN: Checks disabled
Rule added


70: route reject 115/udp
WARN: Checks disabled
Rule added


71: status
WARN: Checks disabled
Status: active

To                         Action      From
--                         ------      ----
113                        REJECT FWD  Anywhere
114/tcp                    REJECT FWD  Anywhere
115/udp                    REJECT FWD  Anywhere



### tuple ### route:reject any 113 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 113 -j REJECT --reject-with tcp-reset
-A ufw-user-forward -p udp --dport 113 -j REJECT
--
### tuple ### route:reject tcp 114 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 114 -j REJECT --reject-with tcp-reset

### tuple ### route:reject udp 115 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p udp --dport 115 -j REJECT

72: route delete reject 113
WARN: Checks disabled
Rule deleted


73: route delete reject 114/tcp
WARN: Checks disabled
Rule deleted


74: route delete reject 115/udp
WARN: Checks disabled
Rule deleted


75: status
WARN: Checks disabled
Status: active


Checking flush builtins
76: disable


iptables -I FORWARD -j ACCEPT -m comment --comment ufw_test_builtins
77: enable


78: disable


iptables -I FORWARD -j ACCEPT -m comment --comment ufw_test_builtins
79: enable


ACCEPT     all  --  0.0.0.0/0            0.0.0.0/0            /* ufw_test_builtins */
Testing status numbered
Setting IPV6 to yes
80: disable


81: enable


82: route allow 53
WARN: Checks disabled
Rule added
Rule added (v6)


83: route allow 23/tcp
WARN: Checks disabled
Rule added
Rule added (v6)


84: route allow smtp
WARN: Checks disabled
Rule added
Rule added (v6)


85: route deny proto tcp to any port 80
WARN: Checks disabled
Rule added
Rule added (v6)


86: route deny proto tcp from 10.0.0.0/8 to 192.168.0.1 port 25
WARN: Checks disabled
Rule added


87: route allow from 10.0.0.0/8
WARN: Checks disabled
Rule added


88: route allow from 172.16.0.0/12
WARN: Checks disabled
Rule added


89: route allow from 192.168.0.0/16
WARN: Checks disabled
Rule added


90: route deny proto udp from 1.2.3.4 to any port 514
WARN: Checks disabled
Rule added


91: route allow proto udp from 1.2.3.5 port 5469 to 1.2.3.4 port 5469
WARN: Checks disabled
Rule added


92: route limit 22/tcp
WARN: Checks disabled
Rule added
Skipping unsupported IPv6 'limit' rule


93: route deny proto tcp from 2001:db8::/32 to any port 25
WARN: Checks disabled
Rule added (v6)


94: route deny from 2001:db8::/32 port 26 to 2001:db8:3:4:5:6:7:8
WARN: Checks disabled
Rule added (v6)


95: status numbered
WARN: Checks disabled
Status: active

     To                         Action      From
     --                         ------      ----
[ 1] 53                         ALLOW FWD   Anywhere
[ 2] 23/tcp                     ALLOW FWD   Anywhere
[ 3] 25/tcp                     ALLOW FWD   Anywhere
[ 4] 80/tcp                     DENY FWD    Anywhere
[ 5] 192.168.0.1 25/tcp         DENY FWD    10.0.0.0/8
[ 6] Anywhere                   ALLOW FWD   10.0.0.0/8
[ 7] Anywhere                   ALLOW FWD   172.16.0.0/12
[ 8] Anywhere                   ALLOW FWD   192.168.0.0/16
[ 9] 514/udp                    DENY FWD    1.2.3.4
[10] 1.2.3.4 5469/udp           ALLOW FWD   1.2.3.5 5469/udp
[11] 22/tcp                     LIMIT FWD   Anywhere
[12] 53 (v6)                    ALLOW FWD   Anywhere (v6)
[13] 23/tcp (v6)                ALLOW FWD   Anywhere (v6)
[14] 25/tcp (v6)                ALLOW FWD   Anywhere (v6)
[15] 80/tcp (v6)                DENY FWD    Anywhere (v6)
[16] 25/tcp                     DENY FWD    2001:db8::/32
[17] 2001:db8:3:4:5:6:7:8       DENY FWD    2001:db8::/32 26



96: route delete allow 53
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


97: route delete allow 23/tcp
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


98: route delete allow smtp
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


99: route delete deny proto tcp to any port 80
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


100: route delete deny proto tcp from 10.0.0.0/8 to 192.168.0.1 port 25
WARN: Checks disabled
Rule deleted


101: route delete allow from 10.0.0.0/8
WARN: Checks disabled
Rule deleted


102: route delete allow from 172.16.0.0/12
WARN: Checks disabled
Rule deleted


103: route delete allow from 192.168.0.0/16
WARN: Checks disabled
Rule deleted


104: route delete deny proto udp from 1.2.3.4 to any port 514
WARN: Checks disabled
Rule deleted


105: route delete allow proto udp from 1.2.3.5 port 5469 to 1.2.3.4 port 5469
WARN: Checks disabled
Rule deleted


106: route delete limit 22/tcp
WARN: Checks disabled
Rule deleted
Skipping unsupported IPv6 'limit' rule


107: route delete deny proto tcp from 2001:db8::/32 to any port 25
WARN: Checks disabled
Rule deleted (v6)


108: route delete deny from 2001:db8::/32 port 26 to 2001:db8:3:4:5:6:7:8
WARN: Checks disabled
Rule deleted (v6)


109: status numbered
WARN: Checks disabled
Status: active


Setting IPV6 to no
110: disable


111: enable


112: route allow 53
WARN: Checks disabled
Rule added


113: route allow 23/tcp
WARN: Checks disabled
Rule added


114: route allow smtp
WARN: Checks disabled
Rule added


115: route deny proto tcp to any port 80
WARN: Checks disabled
Rule added


116: route deny proto tcp from 10.0.0.0/8 to 192.168.0.1 port 25
WARN: Checks disabled
Rule added


117: route allow from 10.0.0.0/8
WARN: Checks disabled
Rule added


118: route allow from 172.16.0.0/12
WARN: Checks disabled
Rule added


119: route allow from 192.168.0.0/16
WARN: Checks disabled
Rule added


120: route deny proto udp from 1.2.3.4 to any port 514
WARN: Checks disabled
Rule added


121: route allow proto udp from 1.2.3.5 port 5469 to 1.2.3.4 port 5469
WARN: Checks disabled
Rule added


122: route limit 22/tcp
WARN: Checks disabled
Rule added


123: status numbered
WARN: Checks disabled
Status: active

     To                         Action      From
     --                         ------      ----
[ 1] 53                         ALLOW FWD   Anywhere
[ 2] 23/tcp                     ALLOW FWD   Anywhere
[ 3] 25/tcp                     ALLOW FWD   Anywhere
[ 4] 80/tcp                     DENY FWD    Anywhere
[ 5] 192.168.0.1 25/tcp         DENY FWD    10.0.0.0/8
[ 6] Anywhere                   ALLOW FWD   10.0.0.0/8
[ 7] Anywhere                   ALLOW FWD   172.16.0.0/12
[ 8] Anywhere                   ALLOW FWD   192.168.0.0/16
[ 9] 514/udp                    DENY FWD    1.2.3.4
[10] 1.2.3.4 5469/udp           ALLOW FWD   1.2.3.5 5469/udp
[11] 22/tcp                     LIMIT FWD   Anywhere



124: route delete allow 53
WARN: Checks disabled
Rule deleted


125: route delete allow 23/tcp
WARN: Checks disabled
Rule deleted


126: route delete allow smtp
WARN: Checks disabled
Rule deleted


127: route delete deny proto tcp to any port 80
WARN: Checks disabled
Rule deleted


128: route delete deny proto tcp from 10.0.0.0/8 to 192.168.0.1 port 25
WARN: Checks disabled
Rule deleted


129: route delete allow from 10.0.0.0/8
WARN: Checks disabled
Rule deleted


130: route delete allow from 172.16.0.0/12
WARN: Checks disabled
Rule deleted


131: route delete allow from 192.168.0.0/16
WARN: Checks disabled
Rule deleted


132: route delete deny proto udp from 1.2.3.4 to any port 514
WARN: Checks disabled
Rule deleted


133: route delete allow proto udp from 1.2.3.5 port 5469 to 1.2.3.4 port 5469
WARN: Checks disabled
Rule deleted


134: route delete limit 22/tcp
WARN: Checks disabled
Rule deleted


135: status numbered
WARN: Checks disabled
Status: active


Testing interfaces
Setting IPV6 to yes
136: disable


137: enable


138: route allow in on fake0
WARN: Checks disabled
Rule added
Rule added (v6)


139: route deny in on fake0:1


140: route reject in on fake0 to 192.168.0.1 port 22
WARN: Checks disabled
Rule added


141: route limit in on fake0 from 10.0.0.1 port 80
WARN: Checks disabled
Rule added


142: route allow in on fake0 to 192.168.0.1 from 10.0.0.1
WARN: Checks disabled
Rule added


143: route deny in on fake0 to 192.168.0.1 port 22 from 10.0.0.1
WARN: Checks disabled
Rule added


144: route reject in on fake0 to 192.168.0.1 from 10.0.0.1 port 80
WARN: Checks disabled
Rule added


145: route limit in on fake0 to 192.168.0.1 port 22 from 10.0.0.1 port 80
WARN: Checks disabled
Rule added


146: route allow in on fake2 log
WARN: Checks disabled
Rule added
Rule added (v6)


147: route allow in on fake0 log from 192.168.0.1 to 10.0.0.1 port 24 proto tcp
WARN: Checks disabled
Rule added


148: route deny in on fake0 log-all from 192.168.0.1 to 10.0.0.1 port 25 proto tcp
WARN: Checks disabled
Rule added


149: route allow in on fake0 to any app Samba
WARN: Checks disabled
Rule added
Rule added (v6)


150: route allow in on fake0 out on fake1 from 192.168.0.1 port 25 to 10.0.0.1 port 25 proto tcp
WARN: Checks disabled
Rule added


151: route allow in on fake0 out on fake2
WARN: Checks disabled
Rule added
Rule added (v6)


152: status numbered
WARN: Checks disabled
Status: active

     To                         Action      From
     --                         ------      ----
[ 1] Anywhere                   ALLOW FWD   Anywhere on fake0
[ 2] 192.168.0.1 22             REJECT FWD  Anywhere on fake0
[ 3] Anywhere                   LIMIT FWD   10.0.0.1 80 on fake0
[ 4] 192.168.0.1                ALLOW FWD   10.0.0.1 on fake0
[ 5] 192.168.0.1 22             DENY FWD    10.0.0.1 on fake0
[ 6] 192.168.0.1                REJECT FWD  10.0.0.1 80 on fake0
[ 7] 192.168.0.1 22             LIMIT FWD   10.0.0.1 80 on fake0
[ 8] Anywhere                   ALLOW FWD   Anywhere on fake2 (log)
[ 9] 10.0.0.1 24/tcp            ALLOW FWD   192.168.0.1 on fake0 (log)
[10] 10.0.0.1 25/tcp            DENY FWD    192.168.0.1 on fake0 (log-all)
[11] Samba                      ALLOW FWD   Anywhere on fake0
[12] 10.0.0.1 25/tcp on fake1   ALLOW FWD   192.168.0.1 25/tcp on fake0
[13] Anywhere on fake2          ALLOW FWD   Anywhere on fake0
[14] Anywhere (v6)              ALLOW FWD   Anywhere (v6) on fake0
[15] Anywhere (v6)              ALLOW FWD   Anywhere (v6) on fake2 (log)
[16] Samba (v6)                 ALLOW FWD   Anywhere (v6) on fake0
[17] Anywhere (v6) on fake2     ALLOW FWD   Anywhere (v6) on fake0



153: route insert 8 allow in on fake2 to any app Samba
WARN: Checks disabled
Rule inserted
Rule inserted (v6)


154: status numbered
WARN: Checks disabled
Status: active

     To                         Action      From
     --                         ------      ----
[ 1] Anywhere                   ALLOW FWD   Anywhere on fake0
[ 2] 192.168.0.1 22             REJECT FWD  Anywhere on fake0
[ 3] Anywhere                   LIMIT FWD   10.0.0.1 80 on fake0
[ 4] 192.168.0.1                ALLOW FWD   10.0.0.1 on fake0
[ 5] 192.168.0.1 22             DENY FWD    10.0.0.1 on fake0
[ 6] 192.168.0.1                REJECT FWD  10.0.0.1 80 on fake0
[ 7] 192.168.0.1 22             LIMIT FWD   10.0.0.1 80 on fake0
[ 8] Samba                      ALLOW FWD   Anywhere on fake2
[ 9] Anywhere                   ALLOW FWD   Anywhere on fake2 (log)
[10] 10.0.0.1 24/tcp            ALLOW FWD   192.168.0.1 on fake0 (log)
[11] 10.0.0.1 25/tcp            DENY FWD    192.168.0.1 on fake0 (log-all)
[12] Samba                      ALLOW FWD   Anywhere on fake0
[13] 10.0.0.1 25/tcp on fake1   ALLOW FWD   192.168.0.1 25/tcp on fake0
[14] Anywhere on fake2          ALLOW FWD   Anywhere on fake0
[15] Anywhere (v6)              ALLOW FWD   Anywhere (v6) on fake0
[16] Samba (v6)                 ALLOW FWD   Anywhere (v6) on fake2
[17] Anywhere (v6)              ALLOW FWD   Anywhere (v6) on fake2 (log)
[18] Samba (v6)                 ALLOW FWD   Anywhere (v6) on fake0
[19] Anywhere (v6) on fake2     ALLOW FWD   Anywhere (v6) on fake0



### tuple ### route:allow any any 0.0.0.0/0 any 0.0.0.0/0 in_fake0
-A ufw-user-forward -i fake0 -j ACCEPT

### tuple ### route:reject any 22 192.168.0.1 any 0.0.0.0/0 in_fake0
-A ufw-user-forward -i fake0 -p tcp -d 192.168.0.1 --dport 22 -j REJECT --reject-with tcp-reset
-A ufw-user-forward -i fake0 -p udp -d 192.168.0.1 --dport 22 -j REJECT
--
### tuple ### route:limit any any 0.0.0.0/0 80 10.0.0.1 in_fake0
-A ufw-user-forward -i fake0 -p tcp -s 10.0.0.1 --sport 80 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-forward -i fake0 -p tcp -s 10.0.0.1 --sport 80 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
--
### tuple ### route:allow any any 192.168.0.1 any 10.0.0.1 in_fake0
-A ufw-user-forward -i fake0 -d 192.168.0.1 -s 10.0.0.1 -j ACCEPT

### tuple ### route:deny any 22 192.168.0.1 any 10.0.0.1 in_fake0
-A ufw-user-forward -i fake0 -p tcp -d 192.168.0.1 --dport 22 -s 10.0.0.1 -j DROP
-A ufw-user-forward -i fake0 -p udp -d 192.168.0.1 --dport 22 -s 10.0.0.1 -j DROP
--
### tuple ### route:reject any any 192.168.0.1 80 10.0.0.1 in_fake0
-A ufw-user-forward -i fake0 -p tcp -d 192.168.0.1 -s 10.0.0.1 --sport 80 -j REJECT --reject-with tcp-reset
-A ufw-user-forward -i fake0 -p udp -d 192.168.0.1 -s 10.0.0.1 --sport 80 -j REJECT
--
### tuple ### route:limit any 22 192.168.0.1 80 10.0.0.1 in_fake0
-A ufw-user-forward -i fake0 -p tcp -d 192.168.0.1 --dport 22 -s 10.0.0.1 --sport 80 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-forward -i fake0 -p tcp -d 192.168.0.1 --dport 22 -s 10.0.0.1 --sport 80 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
--
### tuple ### route:allow udp 137,138 0.0.0.0/0 any 0.0.0.0/0 Samba - in_fake2
-A ufw-user-forward -i fake2 -p udp -m multiport --dports 137,138 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow tcp 139,445 0.0.0.0/0 any 0.0.0.0/0 Samba - in_fake2
-A ufw-user-forward -i fake2 -p tcp -m multiport --dports 139,445 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow_log any any 0.0.0.0/0 any 0.0.0.0/0 in_fake2
-A ufw-user-logging-forward -i fake2 -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-user-logging-forward -i fake2 -j RETURN
--
### tuple ### route:allow_log tcp 24 10.0.0.1 any 192.168.0.1 in_fake0
-A ufw-user-logging-forward -i fake0 -p tcp -d 10.0.0.1 --dport 24 -s 192.168.0.1 -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-user-logging-forward -i fake0 -p tcp -d 10.0.0.1 --dport 24 -s 192.168.0.1 -j RETURN
--
### tuple ### route:deny_log-all tcp 25 10.0.0.1 any 192.168.0.1 in_fake0
-A ufw-user-logging-forward -i fake0 -p tcp -d 10.0.0.1 --dport 25 -s 192.168.0.1 -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-user-logging-forward -i fake0 -p tcp -d 10.0.0.1 --dport 25 -s 192.168.0.1 -j RETURN
--
### tuple ### route:allow udp 137,138 0.0.0.0/0 any 0.0.0.0/0 Samba - in_fake0
-A ufw-user-forward -i fake0 -p udp -m multiport --dports 137,138 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow tcp 139,445 0.0.0.0/0 any 0.0.0.0/0 Samba - in_fake0
-A ufw-user-forward -i fake0 -p tcp -m multiport --dports 139,445 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow tcp 25 10.0.0.1 25 192.168.0.1 in_fake0!out_fake1
-A ufw-user-forward -i fake0 -o fake1 -p tcp -d 10.0.0.1 --dport 25 -s 192.168.0.1 --sport 25 -j ACCEPT

### tuple ### route:allow any any 0.0.0.0/0 any 0.0.0.0/0 in_fake0!out_fake2
-A ufw-user-forward -i fake0 -o fake2 -j ACCEPT

### tuple ### route:allow any any ::/0 any ::/0 in_fake0
-A ufw6-user-forward -i fake0 -j ACCEPT

### tuple ### route:allow udp 137,138 ::/0 any ::/0 Samba - in_fake2
-A ufw6-user-forward -i fake2 -p udp -m multiport --dports 137,138 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow tcp 139,445 ::/0 any ::/0 Samba - in_fake2
-A ufw6-user-forward -i fake2 -p tcp -m multiport --dports 139,445 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow_log any any ::/0 any ::/0 in_fake2
-A ufw6-user-logging-forward -i fake2 -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw6-user-logging-forward -i fake2 -j RETURN
--
### tuple ### route:allow udp 137,138 ::/0 any ::/0 Samba - in_fake0
-A ufw6-user-forward -i fake0 -p udp -m multiport --dports 137,138 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow tcp 139,445 ::/0 any ::/0 Samba - in_fake0
-A ufw6-user-forward -i fake0 -p tcp -m multiport --dports 139,445 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow any any ::/0 any ::/0 in_fake0!out_fake2
-A ufw6-user-forward -i fake0 -o fake2 -j ACCEPT

155: route delete allow in on fake0
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


156: route delete reject in on fake0 to 192.168.0.1 port 22
WARN: Checks disabled
Rule deleted


157: route delete limit in on fake0 from 10.0.0.1 port 80
WARN: Checks disabled
Rule deleted


158: route delete allow in on fake0 to 192.168.0.1 from 10.0.0.1
WARN: Checks disabled
Rule deleted


159: route delete deny in on fake0 to 192.168.0.1 port 22 from 10.0.0.1
WARN: Checks disabled
Rule deleted


160: route delete reject in on fake0 to 192.168.0.1 from 10.0.0.1 port 80
WARN: Checks disabled
Rule deleted


161: route delete limit in on fake0 to 192.168.0.1 port 22 from 10.0.0.1 port 80
WARN: Checks disabled
Rule deleted


162: route delete allow in on fake2 log
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


163: route delete allow in on fake0 log from 192.168.0.1 to 10.0.0.1 port 24 proto tcp
WARN: Checks disabled
Rule deleted


164: route delete deny in on fake0 log-all from 192.168.0.1 to 10.0.0.1 port 25 proto tcp
WARN: Checks disabled
Rule deleted


165: route delete allow in on fake0 to any app Samba
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


166: route delete allow in on fake2 to any app Samba
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


167: route delete allow in on fake0 out on fake1 from 192.168.0.1 port 25 to 10.0.0.1 port 25 proto tcp
WARN: Checks disabled
Rule deleted


168: route delete allow in on fake0 out on fake2
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


Setting IPV6 to yes
169: disable


170: enable


171: route allow out on fake0
WARN: Checks disabled
Rule added
Rule added (v6)


172: route deny out on fake0:1


173: route reject out on fake0 to 192.168.0.1 port 22
WARN: Checks disabled
Rule added


174: route limit out on fake0 from 10.0.0.1 port 80
WARN: Checks disabled
Rule added


175: route allow out on fake0 to 192.168.0.1 from 10.0.0.1
WARN: Checks disabled
Rule added


176: route deny out on fake0 to 192.168.0.1 port 22 from 10.0.0.1
WARN: Checks disabled
Rule added


177: route reject out on fake0 to 192.168.0.1 from 10.0.0.1 port 80
WARN: Checks disabled
Rule added


178: route limit out on fake0 to 192.168.0.1 port 22 from 10.0.0.1 port 80
WARN: Checks disabled
Rule added


179: route allow out on fake2 log
WARN: Checks disabled
Rule added
Rule added (v6)


180: route allow out on fake0 log from 192.168.0.1 to 10.0.0.1 port 24 proto tcp
WARN: Checks disabled
Rule added


181: route deny out on fake0 log-all from 192.168.0.1 to 10.0.0.1 port 25 proto tcp
WARN: Checks disabled
Rule added


182: route allow out on fake0 to any app Samba
WARN: Checks disabled
Rule added
Rule added (v6)


183: route allow in on fake0 out on fake1 from 192.168.0.1 port 25 to 10.0.0.1 port 25 proto tcp
WARN: Checks disabled
Rule added


184: route allow in on fake0 out on fake2
WARN: Checks disabled
Rule added
Rule added (v6)


185: status numbered
WARN: Checks disabled
Status: active

     To                         Action      From
     --                         ------      ----
[ 1] Anywhere on fake0          ALLOW FWD   Anywhere (out)
[ 2] 192.168.0.1 22 on fake0    REJECT FWD  Anywhere (out)
[ 3] Anywhere on fake0          LIMIT FWD   10.0.0.1 80 (out)
[ 4] 192.168.0.1 on fake0       ALLOW FWD   10.0.0.1 (out)
[ 5] 192.168.0.1 22 on fake0    DENY FWD    10.0.0.1 (out)
[ 6] 192.168.0.1 on fake0       REJECT FWD  10.0.0.1 80 (out)
[ 7] 192.168.0.1 22 on fake0    LIMIT FWD   10.0.0.1 80 (out)
[ 8] Anywhere on fake2          ALLOW FWD   Anywhere (log, out)
[ 9] 10.0.0.1 24/tcp on fake0   ALLOW FWD   192.168.0.1 (log, out)
[10] 10.0.0.1 25/tcp on fake0   DENY FWD    192.168.0.1 (log-all, out)
[11] Samba on fake0             ALLOW FWD   Anywhere (out)
[12] 10.0.0.1 25/tcp on fake1   ALLOW FWD   192.168.0.1 25/tcp on fake0
[13] Anywhere on fake2          ALLOW FWD   Anywhere on fake0
[14] Anywhere (v6) on fake0     ALLOW FWD   Anywhere (v6) (out)
[15] Anywhere (v6) on fake2     ALLOW FWD   Anywhere (v6) (log, out)
[16] Samba (v6) on fake0        ALLOW FWD   Anywhere (v6) (out)
[17] Anywhere (v6) on fake2     ALLOW FWD   Anywhere (v6) on fake0



186: route insert 8 allow out on fake2 to any app Samba
WARN: Checks disabled
Rule inserted
Rule inserted (v6)


187: status numbered
WARN: Checks disabled
Status: active

     To                         Action      From
     --                         ------      ----
[ 1] Anywhere on fake0          ALLOW FWD   Anywhere (out)
[ 2] 192.168.0.1 22 on fake0    REJECT FWD  Anywhere (out)
[ 3] Anywhere on fake0          LIMIT FWD   10.0.0.1 80 (out)
[ 4] 192.168.0.1 on fake0       ALLOW FWD   10.0.0.1 (out)
[ 5] 192.168.0.1 22 on fake0    DENY FWD    10.0.0.1 (out)
[ 6] 192.168.0.1 on fake0       REJECT FWD  10.0.0.1 80 (out)
[ 7] 192.168.0.1 22 on fake0    LIMIT FWD   10.0.0.1 80 (out)
[ 8] Samba on fake2             ALLOW FWD   Anywhere (out)
[ 9] Anywhere on fake2          ALLOW FWD   Anywhere (log, out)
[10] 10.0.0.1 24/tcp on fake0   ALLOW FWD   192.168.0.1 (log, out)
[11] 10.0.0.1 25/tcp on fake0   DENY FWD    192.168.0.1 (log-all, out)
[12] Samba on fake0             ALLOW FWD   Anywhere (out)
[13] 10.0.0.1 25/tcp on fake1   ALLOW FWD   192.168.0.1 25/tcp on fake0
[14] Anywhere on fake2          ALLOW FWD   Anywhere on fake0
[15] Anywhere (v6) on fake0     ALLOW FWD   Anywhere (v6) (out)
[16] Samba (v6) on fake2        ALLOW FWD   Anywhere (v6) (out)
[17] Anywhere (v6) on fake2     ALLOW FWD   Anywhere (v6) (log, out)
[18] Samba (v6) on fake0        ALLOW FWD   Anywhere (v6) (out)
[19] Anywhere (v6) on fake2     ALLOW FWD   Anywhere (v6) on fake0



### tuple ### route:allow any any 0.0.0.0/0 any 0.0.0.0/0 out_fake0
-A ufw-user-forward -o fake0 -j ACCEPT

### tuple ### route:reject any 22 192.168.0.1 any 0.0.0.0/0 out_fake0
-A ufw-user-forward -o fake0 -p tcp -d 192.168.0.1 --dport 22 -j REJECT --reject-with tcp-reset
-A ufw-user-forward -o fake0 -p udp -d 192.168.0.1 --dport 22 -j REJECT
--
### tuple ### route:limit any any 0.0.0.0/0 80 10.0.0.1 out_fake0
-A ufw-user-forward -o fake0 -p tcp -s 10.0.0.1 --sport 80 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-forward -o fake0 -p tcp -s 10.0.0.1 --sport 80 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
--
### tuple ### route:allow any any 192.168.0.1 any 10.0.0.1 out_fake0
-A ufw-user-forward -o fake0 -d 192.168.0.1 -s 10.0.0.1 -j ACCEPT

### tuple ### route:deny any 22 192.168.0.1 any 10.0.0.1 out_fake0
-A ufw-user-forward -o fake0 -p tcp -d 192.168.0.1 --dport 22 -s 10.0.0.1 -j DROP
-A ufw-user-forward -o fake0 -p udp -d 192.168.0.1 --dport 22 -s 10.0.0.1 -j DROP
--
### tuple ### route:reject any any 192.168.0.1 80 10.0.0.1 out_fake0
-A ufw-user-forward -o fake0 -p tcp -d 192.168.0.1 -s 10.0.0.1 --sport 80 -j REJECT --reject-with tcp-reset
-A ufw-user-forward -o fake0 -p udp -d 192.168.0.1 -s 10.0.0.1 --sport 80 -j REJECT
--
### tuple ### route:limit any 22 192.168.0.1 80 10.0.0.1 out_fake0
-A ufw-user-forward -o fake0 -p tcp -d 192.168.0.1 --dport 22 -s 10.0.0.1 --sport 80 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-forward -o fake0 -p tcp -d 192.168.0.1 --dport 22 -s 10.0.0.1 --sport 80 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
--
### tuple ### route:allow udp 137,138 0.0.0.0/0 any 0.0.0.0/0 Samba - out_fake2
-A ufw-user-forward -o fake2 -p udp -m multiport --dports 137,138 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow tcp 139,445 0.0.0.0/0 any 0.0.0.0/0 Samba - out_fake2
-A ufw-user-forward -o fake2 -p tcp -m multiport --dports 139,445 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow_log any any 0.0.0.0/0 any 0.0.0.0/0 out_fake2
-A ufw-user-logging-forward -o fake2 -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-user-logging-forward -o fake2 -j RETURN
--
### tuple ### route:allow_log tcp 24 10.0.0.1 any 192.168.0.1 out_fake0
-A ufw-user-logging-forward -o fake0 -p tcp -d 10.0.0.1 --dport 24 -s 192.168.0.1 -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-user-logging-forward -o fake0 -p tcp -d 10.0.0.1 --dport 24 -s 192.168.0.1 -j RETURN
--
### tuple ### route:deny_log-all tcp 25 10.0.0.1 any 192.168.0.1 out_fake0
-A ufw-user-logging-forward -o fake0 -p tcp -d 10.0.0.1 --dport 25 -s 192.168.0.1 -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-user-logging-forward -o fake0 -p tcp -d 10.0.0.1 --dport 25 -s 192.168.0.1 -j RETURN
--
### tuple ### route:allow udp 137,138 0.0.0.0/0 any 0.0.0.0/0 Samba - out_fake0
-A ufw-user-forward -o fake0 -p udp -m multiport --dports 137,138 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow tcp 139,445 0.0.0.0/0 any 0.0.0.0/0 Samba - out_fake0
-A ufw-user-forward -o fake0 -p tcp -m multiport --dports 139,445 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow tcp 25 10.0.0.1 25 192.168.0.1 in_fake0!out_fake1
-A ufw-user-forward -i fake0 -o fake1 -p tcp -d 10.0.0.1 --dport 25 -s 192.168.0.1 --sport 25 -j ACCEPT

### tuple ### route:allow any any 0.0.0.0/0 any 0.0.0.0/0 in_fake0!out_fake2
-A ufw-user-forward -i fake0 -o fake2 -j ACCEPT

### tuple ### route:allow any any ::/0 any ::/0 out_fake0
-A ufw6-user-forward -o fake0 -j ACCEPT

### tuple ### route:allow udp 137,138 ::/0 any ::/0 Samba - out_fake2
-A ufw6-user-forward -o fake2 -p udp -m multiport --dports 137,138 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow tcp 139,445 ::/0 any ::/0 Samba - out_fake2
-A ufw6-user-forward -o fake2 -p tcp -m multiport --dports 139,445 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow_log any any ::/0 any ::/0 out_fake2
-A ufw6-user-logging-forward -o fake2 -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw6-user-logging-forward -o fake2 -j RETURN
--
### tuple ### route:allow udp 137,138 ::/0 any ::/0 Samba - out_fake0
-A ufw6-user-forward -o fake0 -p udp -m multiport --dports 137,138 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow tcp 139,445 ::/0 any ::/0 Samba - out_fake0
-A ufw6-user-forward -o fake0 -p tcp -m multiport --dports 139,445 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow any any ::/0 any ::/0 in_fake0!out_fake2
-A ufw6-user-forward -i fake0 -o fake2 -j ACCEPT

188: route delete allow out on fake0
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


189: route delete reject out on fake0 to 192.168.0.1 port 22
WARN: Checks disabled
Rule deleted


190: route delete limit out on fake0 from 10.0.0.1 port 80
WARN: Checks disabled
Rule deleted


191: route delete allow out on fake0 to 192.168.0.1 from 10.0.0.1
WARN: Checks disabled
Rule deleted


192: route delete deny out on fake0 to 192.168.0.1 port 22 from 10.0.0.1
WARN: Checks disabled
Rule deleted


193: route delete reject out on fake0 to 192.168.0.1 from 10.0.0.1 port 80
WARN: Checks disabled
Rule deleted


194: route delete limit out on fake0 to 192.168.0.1 port 22 from 10.0.0.1 port 80
WARN: Checks disabled
Rule deleted


195: route delete allow out on fake2 log
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


196: route delete allow out on fake0 log from 192.168.0.1 to 10.0.0.1 port 24 proto tcp
WARN: Checks disabled
Rule deleted


197: route delete deny out on fake0 log-all from 192.168.0.1 to 10.0.0.1 port 25 proto tcp
WARN: Checks disabled
Rule deleted


198: route delete allow out on fake0 to any app Samba
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


199: route delete allow out on fake2 to any app Samba
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


200: route delete allow in on fake0 out on fake1 from 192.168.0.1 port 25 to 10.0.0.1 port 25 proto tcp
WARN: Checks disabled
Rule deleted


201: route delete allow in on fake0 out on fake2
WARN: Checks disabled
Rule deleted
Rule deleted (v6)


Setting IPV6 to no
202: disable


203: enable


204: route allow in on fake0
WARN: Checks disabled
Rule added


205: route deny in on fake0:1


206: route reject in on fake0 to 192.168.0.1 port 22
WARN: Checks disabled
Rule added


207: route limit in on fake0 from 10.0.0.1 port 80
WARN: Checks disabled
Rule added


208: route allow in on fake0 to 192.168.0.1 from 10.0.0.1
WARN: Checks disabled
Rule added


209: route deny in on fake0 to 192.168.0.1 port 22 from 10.0.0.1
WARN: Checks disabled
Rule added


210: route reject in on fake0 to 192.168.0.1 from 10.0.0.1 port 80
WARN: Checks disabled
Rule added


211: route limit in on fake0 to 192.168.0.1 port 22 from 10.0.0.1 port 80
WARN: Checks disabled
Rule added


212: route allow in on fake2 log
WARN: Checks disabled
Rule added


213: route allow in on fake0 log from 192.168.0.1 to 10.0.0.1 port 24 proto tcp
WARN: Checks disabled
Rule added


214: route deny in on fake0 log-all from 192.168.0.1 to 10.0.0.1 port 25 proto tcp
WARN: Checks disabled
Rule added


215: route allow in on fake0 to any app Samba
WARN: Checks disabled
Rule added


216: route allow in on fake0 out on fake1 from 192.168.0.1 port 25 to 10.0.0.1 port 25 proto tcp
WARN: Checks disabled
Rule added


217: route allow in on fake0 out on fake2
WARN: Checks disabled
Rule added


218: status numbered
WARN: Checks disabled
Status: active

     To                         Action      From
     --                         ------      ----
[ 1] Anywhere                   ALLOW FWD   Anywhere on fake0
[ 2] 192.168.0.1 22             REJECT FWD  Anywhere on fake0
[ 3] Anywhere                   LIMIT FWD   10.0.0.1 80 on fake0
[ 4] 192.168.0.1                ALLOW FWD   10.0.0.1 on fake0
[ 5] 192.168.0.1 22             DENY FWD    10.0.0.1 on fake0
[ 6] 192.168.0.1                REJECT FWD  10.0.0.1 80 on fake0
[ 7] 192.168.0.1 22             LIMIT FWD   10.0.0.1 80 on fake0
[ 8] Anywhere                   ALLOW FWD   Anywhere on fake2 (log)
[ 9] 10.0.0.1 24/tcp            ALLOW FWD   192.168.0.1 on fake0 (log)
[10] 10.0.0.1 25/tcp            DENY FWD    192.168.0.1 on fake0 (log-all)
[11] Samba                      ALLOW FWD   Anywhere on fake0
[12] 10.0.0.1 25/tcp on fake1   ALLOW FWD   192.168.0.1 25/tcp on fake0
[13] Anywhere on fake2          ALLOW FWD   Anywhere on fake0



219: route insert 8 allow in on fake2 to any app Samba
WARN: Checks disabled
Rule inserted


220: status numbered
WARN: Checks disabled
Status: active

     To                         Action      From
     --                         ------      ----
[ 1] Anywhere                   ALLOW FWD   Anywhere on fake0
[ 2] 192.168.0.1 22             REJECT FWD  Anywhere on fake0
[ 3] Anywhere                   LIMIT FWD   10.0.0.1 80 on fake0
[ 4] 192.168.0.1                ALLOW FWD   10.0.0.1 on fake0
[ 5] 192.168.0.1 22             DENY FWD    10.0.0.1 on fake0
[ 6] 192.168.0.1                REJECT FWD  10.0.0.1 80 on fake0
[ 7] 192.168.0.1 22             LIMIT FWD   10.0.0.1 80 on fake0
[ 8] Samba                      ALLOW FWD   Anywhere on fake2
[ 9] Anywhere                   ALLOW FWD   Anywhere on fake2 (log)
[10] 10.0.0.1 24/tcp            ALLOW FWD   192.168.0.1 on fake0 (log)
[11] 10.0.0.1 25/tcp            DENY FWD    192.168.0.1 on fake0 (log-all)
[12] Samba                      ALLOW FWD   Anywhere on fake0
[13] 10.0.0.1 25/tcp on fake1   ALLOW FWD   192.168.0.1 25/tcp on fake0
[14] Anywhere on fake2          ALLOW FWD   Anywhere on fake0



### tuple ### route:allow any any 0.0.0.0/0 any 0.0.0.0/0 in_fake0
-A ufw-user-forward -i fake0 -j ACCEPT

### tuple ### route:reject any 22 192.168.0.1 any 0.0.0.0/0 in_fake0
-A ufw-user-forward -i fake0 -p tcp -d 192.168.0.1 --dport 22 -j REJECT --reject-with tcp-reset
-A ufw-user-forward -i fake0 -p udp -d 192.168.0.1 --dport 22 -j REJECT
--
### tuple ### route:limit any any 0.0.0.0/0 80 10.0.0.1 in_fake0
-A ufw-user-forward -i fake0 -p tcp -s 10.0.0.1 --sport 80 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-forward -i fake0 -p tcp -s 10.0.0.1 --sport 80 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
--
### tuple ### route:allow any any 192.168.0.1 any 10.0.0.1 in_fake0
-A ufw-user-forward -i fake0 -d 192.168.0.1 -s 10.0.0.1 -j ACCEPT

### tuple ### route:deny any 22 192.168.0.1 any 10.0.0.1 in_fake0
-A ufw-user-forward -i fake0 -p tcp -d 192.168.0.1 --dport 22 -s 10.0.0.1 -j DROP
-A ufw-user-forward -i fake0 -p udp -d 192.168.0.1 --dport 22 -s 10.0.0.1 -j DROP
--
### tuple ### route:reject any any 192.168.0.1 80 10.0.0.1 in_fake0
-A ufw-user-forward -i fake0 -p tcp -d 192.168.0.1 -s 10.0.0.1 --sport 80 -j REJECT --reject-with tcp-reset
-A ufw-user-forward -i fake0 -p udp -d 192.168.0.1 -s 10.0.0.1 --sport 80 -j REJECT
--
### tuple ### route:limit any 22 192.168.0.1 80 10.0.0.1 in_fake0
-A ufw-user-forward -i fake0 -p tcp -d 192.168.0.1 --dport 22 -s 10.0.0.1 --sport 80 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-forward -i fake0 -p tcp -d 192.168.0.1 --dport 22 -s 10.0.0.1 --sport 80 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
--
### tuple ### route:allow udp 137,138 0.0.0.0/0 any 0.0.0.0/0 Samba - in_fake2
-A ufw-user-forward -i fake2 -p udp -m multiport --dports 137,138 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow tcp 139,445 0.0.0.0/0 any 0.0.0.0/0 Samba - in_fake2
-A ufw-user-forward -i fake2 -p tcp -m multiport --dports 139,445 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow_log any any 0.0.0.0/0 any 0.0.0.0/0 in_fake2
-A ufw-user-logging-forward -i fake2 -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-user-logging-forward -i fake2 -j RETURN
--
### tuple ### route:allow_log tcp 24 10.0.0.1 any 192.168.0.1 in_fake0
-A ufw-user-logging-forward -i fake0 -p tcp -d 10.0.0.1 --dport 24 -s 192.168.0.1 -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-user-logging-forward -i fake0 -p tcp -d 10.0.0.1 --dport 24 -s 192.168.0.1 -j RETURN
--
### tuple ### route:deny_log-all tcp 25 10.0.0.1 any 192.168.0.1 in_fake0
-A ufw-user-logging-forward -i fake0 -p tcp -d 10.0.0.1 --dport 25 -s 192.168.0.1 -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-user-logging-forward -i fake0 -p tcp -d 10.0.0.1 --dport 25 -s 192.168.0.1 -j RETURN
--
### tuple ### route:allow udp 137,138 0.0.0.0/0 any 0.0.0.0/0 Samba - in_fake0
-A ufw-user-forward -i fake0 -p udp -m multiport --dports 137,138 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow tcp 139,445 0.0.0.0/0 any 0.0.0.0/0 Samba - in_fake0
-A ufw-user-forward -i fake0 -p tcp -m multiport --dports 139,445 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow tcp 25 10.0.0.1 25 192.168.0.1 in_fake0!out_fake1
-A ufw-user-forward -i fake0 -o fake1 -p tcp -d 10.0.0.1 --dport 25 -s 192.168.0.1 --sport 25 -j ACCEPT

### tuple ### route:allow any any 0.0.0.0/0 any 0.0.0.0/0 in_fake0!out_fake2
-A ufw-user-forward -i fake0 -o fake2 -j ACCEPT

221: route delete allow in on fake0
WARN: Checks disabled
Rule deleted


222: route delete reject in on fake0 to 192.168.0.1 port 22
WARN: Checks disabled
Rule deleted


223: route delete limit in on fake0 from 10.0.0.1 port 80
WARN: Checks disabled
Rule deleted


224: route delete allow in on fake0 to 192.168.0.1 from 10.0.0.1
WARN: Checks disabled
Rule deleted


225: route delete deny in on fake0 to 192.168.0.1 port 22 from 10.0.0.1
WARN: Checks disabled
Rule deleted


226: route delete reject in on fake0 to 192.168.0.1 from 10.0.0.1 port 80
WARN: Checks disabled
Rule deleted


227: route delete limit in on fake0 to 192.168.0.1 port 22 from 10.0.0.1 port 80
WARN: Checks disabled
Rule deleted


228: route delete allow in on fake2 log
WARN: Checks disabled
Rule deleted


229: route delete allow in on fake0 log from 192.168.0.1 to 10.0.0.1 port 24 proto tcp
WARN: Checks disabled
Rule deleted


230: route delete deny in on fake0 log-all from 192.168.0.1 to 10.0.0.1 port 25 proto tcp
WARN: Checks disabled
Rule deleted


231: route delete allow in on fake0 to any app Samba
WARN: Checks disabled
Rule deleted


232: route delete allow in on fake2 to any app Samba
WARN: Checks disabled
Rule deleted


233: route delete allow in on fake0 out on fake1 from 192.168.0.1 port 25 to 10.0.0.1 port 25 proto tcp
WARN: Checks disabled
Rule deleted


234: route delete allow in on fake0 out on fake2
WARN: Checks disabled
Rule deleted


Setting IPV6 to no
235: disable


236: enable


237: route allow out on fake0
WARN: Checks disabled
Rule added


238: route deny out on fake0:1


239: route reject out on fake0 to 192.168.0.1 port 22
WARN: Checks disabled
Rule added


240: route limit out on fake0 from 10.0.0.1 port 80
WARN: Checks disabled
Rule added


241: route allow out on fake0 to 192.168.0.1 from 10.0.0.1
WARN: Checks disabled
Rule added


242: route deny out on fake0 to 192.168.0.1 port 22 from 10.0.0.1
WARN: Checks disabled
Rule added


243: route reject out on fake0 to 192.168.0.1 from 10.0.0.1 port 80
WARN: Checks disabled
Rule added


244: route limit out on fake0 to 192.168.0.1 port 22 from 10.0.0.1 port 80
WARN: Checks disabled
Rule added


245: route allow out on fake2 log
WARN: Checks disabled
Rule added


246: route allow out on fake0 log from 192.168.0.1 to 10.0.0.1 port 24 proto tcp
WARN: Checks disabled
Rule added


247: route deny out on fake0 log-all from 192.168.0.1 to 10.0.0.1 port 25 proto tcp
WARN: Checks disabled
Rule added


248: route allow out on fake0 to any app Samba
WARN: Checks disabled
Rule added


249: route allow in on fake0 out on fake1 from 192.168.0.1 port 25 to 10.0.0.1 port 25 proto tcp
WARN: Checks disabled
Rule added


250: route allow in on fake0 out on fake2
WARN: Checks disabled
Rule added


251: status numbered
WARN: Checks disabled
Status: active

     To                         Action      From
     --                         ------      ----
[ 1] Anywhere on fake0          ALLOW FWD   Anywhere (out)
[ 2] 192.168.0.1 22 on fake0    REJECT FWD  Anywhere (out)
[ 3] Anywhere on fake0          LIMIT FWD   10.0.0.1 80 (out)
[ 4] 192.168.0.1 on fake0       ALLOW FWD   10.0.0.1 (out)
[ 5] 192.168.0.1 22 on fake0    DENY FWD    10.0.0.1 (out)
[ 6] 192.168.0.1 on fake0       REJECT FWD  10.0.0.1 80 (out)
[ 7] 192.168.0.1 22 on fake0    LIMIT FWD   10.0.0.1 80 (out)
[ 8] Anywhere on fake2          ALLOW FWD   Anywhere (log, out)
[ 9] 10.0.0.1 24/tcp on fake0   ALLOW FWD   192.168.0.1 (log, out)
[10] 10.0.0.1 25/tcp on fake0   DENY FWD    192.168.0.1 (log-all, out)
[11] Samba on fake0             ALLOW FWD   Anywhere (out)
[12] 10.0.0.1 25/tcp on fake1   ALLOW FWD   192.168.0.1 25/tcp on fake0
[13] Anywhere on fake2          ALLOW FWD   Anywhere on fake0



252: route insert 8 allow out on fake2 to any app Samba
WARN: Checks disabled
Rule inserted


253: status numbered
WARN: Checks disabled
Status: active

     To                         Action      From
     --                         ------      ----
[ 1] Anywhere on fake0          ALLOW FWD   Anywhere (out)
[ 2] 192.168.0.1 22 on fake0    REJECT FWD  Anywhere (out)
[ 3] Anywhere on fake0          LIMIT FWD   10.0.0.1 80 (out)
[ 4] 192.168.0.1 on fake0       ALLOW FWD   10.0.0.1 (out)
[ 5] 192.168.0.1 22 on fake0    DENY FWD    10.0.0.1 (out)
[ 6] 192.168.0.1 on fake0       REJECT FWD  10.0.0.1 80 (out)
[ 7] 192.168.0.1 22 on fake0    LIMIT FWD   10.0.0.1 80 (out)
[ 8] Samba on fake2             ALLOW FWD   Anywhere (out)
[ 9] Anywhere on fake2          ALLOW FWD   Anywhere (log, out)
[10] 10.0.0.1 24/tcp on fake0   ALLOW FWD   192.168.0.1 (log, out)
[11] 10.0.0.1 25/tcp on fake0   DENY FWD    192.168.0.1 (log-all, out)
[12] Samba on fake0             ALLOW FWD   Anywhere (out)
[13] 10.0.0.1 25/tcp on fake1   ALLOW FWD   192.168.0.1 25/tcp on fake0
[14] Anywhere on fake2          ALLOW FWD   Anywhere on fake0



### tuple ### route:allow any any 0.0.0.0/0 any 0.0.0.0/0 out_fake0
-A ufw-user-forward -o fake0 -j ACCEPT

### tuple ### route:reject any 22 192.168.0.1 any 0.0.0.0/0 out_fake0
-A ufw-user-forward -o fake0 -p tcp -d 192.168.0.1 --dport 22 -j REJECT --reject-with tcp-reset
-A ufw-user-forward -o fake0 -p udp -d 192.168.0.1 --dport 22 -j REJECT
--
### tuple ### route:limit any any 0.0.0.0/0 80 10.0.0.1 out_fake0
-A ufw-user-forward -o fake0 -p tcp -s 10.0.0.1 --sport 80 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-forward -o fake0 -p tcp -s 10.0.0.1 --sport 80 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
--
### tuple ### route:allow any any 192.168.0.1 any 10.0.0.1 out_fake0
-A ufw-user-forward -o fake0 -d 192.168.0.1 -s 10.0.0.1 -j ACCEPT

### tuple ### route:deny any 22 192.168.0.1 any 10.0.0.1 out_fake0
-A ufw-user-forward -o fake0 -p tcp -d 192.168.0.1 --dport 22 -s 10.0.0.1 -j DROP
-A ufw-user-forward -o fake0 -p udp -d 192.168.0.1 --dport 22 -s 10.0.0.1 -j DROP
--
### tuple ### route:reject any any 192.168.0.1 80 10.0.0.1 out_fake0
-A ufw-user-forward -o fake0 -p tcp -d 192.168.0.1 -s 10.0.0.1 --sport 80 -j REJECT --reject-with tcp-reset
-A ufw-user-forward -o fake0 -p udp -d 192.168.0.1 -s 10.0.0.1 --sport 80 -j REJECT
--
### tuple ### route:limit any 22 192.168.0.1 80 10.0.0.1 out_fake0
-A ufw-user-forward -o fake0 -p tcp -d 192.168.0.1 --dport 22 -s 10.0.0.1 --sport 80 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-forward -o fake0 -p tcp -d 192.168.0.1 --dport 22 -s 10.0.0.1 --sport 80 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
--
### tuple ### route:allow udp 137,138 0.0.0.0/0 any 0.0.0.0/0 Samba - out_fake2
-A ufw-user-forward -o fake2 -p udp -m multiport --dports 137,138 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow tcp 139,445 0.0.0.0/0 any 0.0.0.0/0 Samba - out_fake2
-A ufw-user-forward -o fake2 -p tcp -m multiport --dports 139,445 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow_log any any 0.0.0.0/0 any 0.0.0.0/0 out_fake2
-A ufw-user-logging-forward -o fake2 -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-user-logging-forward -o fake2 -j RETURN
--
### tuple ### route:allow_log tcp 24 10.0.0.1 any 192.168.0.1 out_fake0
-A ufw-user-logging-forward -o fake0 -p tcp -d 10.0.0.1 --dport 24 -s 192.168.0.1 -m conntrack --ctstate NEW -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-user-logging-forward -o fake0 -p tcp -d 10.0.0.1 --dport 24 -s 192.168.0.1 -j RETURN
--
### tuple ### route:deny_log-all tcp 25 10.0.0.1 any 192.168.0.1 out_fake0
-A ufw-user-logging-forward -o fake0 -p tcp -d 10.0.0.1 --dport 25 -s 192.168.0.1 -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-user-logging-forward -o fake0 -p tcp -d 10.0.0.1 --dport 25 -s 192.168.0.1 -j RETURN
--
### tuple ### route:allow udp 137,138 0.0.0.0/0 any 0.0.0.0/0 Samba - out_fake0
-A ufw-user-forward -o fake0 -p udp -m multiport --dports 137,138 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow tcp 139,445 0.0.0.0/0 any 0.0.0.0/0 Samba - out_fake0
-A ufw-user-forward -o fake0 -p tcp -m multiport --dports 139,445 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### route:allow tcp 25 10.0.0.1 25 192.168.0.1 in_fake0!out_fake1
-A ufw-user-forward -i fake0 -o fake1 -p tcp -d 10.0.0.1 --dport 25 -s 192.168.0.1 --sport 25 -j ACCEPT

### tuple ### route:allow any any 0.0.0.0/0 any 0.0.0.0/0 in_fake0!out_fake2
-A ufw-user-forward -i fake0 -o fake2 -j ACCEPT

254: route delete allow out on fake0
WARN: Checks disabled
Rule deleted


255: route delete reject out on fake0 to 192.168.0.1 port 22
WARN: Checks disabled
Rule deleted


256: route delete limit out on fake0 from 10.0.0.1 port 80
WARN: Checks disabled
Rule deleted


257: route delete allow out on fake0 to 192.168.0.1 from 10.0.0.1
WARN: Checks disabled
Rule deleted


258: route delete deny out on fake0 to 192.168.0.1 port 22 from 10.0.0.1
WARN: Checks disabled
Rule deleted


259: route delete reject out on fake0 to 192.168.0.1 from 10.0.0.1 port 80
WARN: Checks disabled
Rule deleted


260: route delete limit out on fake0 to 192.168.0.1 port 22 from 10.0.0.1 port 80
WARN: Checks disabled
Rule deleted


261: route delete allow out on fake2 log
WARN: Checks disabled
Rule deleted


262: route delete allow out on fake0 log from 192.168.0.1 to 10.0.0.1 port 24 proto tcp
WARN: Checks disabled
Rule deleted


263: route delete deny out on fake0 log-all from 192.168.0.1 to 10.0.0.1 port 25 proto tcp
WARN: Checks disabled
Rule deleted


264: route delete allow out on fake0 to any app Samba
WARN: Checks disabled
Rule deleted


265: route delete allow out on fake2 to any app Samba
WARN: Checks disabled
Rule deleted


266: route delete allow in on fake0 out on fake1 from 192.168.0.1 port 25 to 10.0.0.1 port 25 proto tcp
WARN: Checks disabled
Rule deleted


267: route delete allow in on fake0 out on fake2
WARN: Checks disabled
Rule deleted


Compare enable and ufw-init
268: disable


269: route allow 23/tcp


270: logging medium


271: enable


272: disable


273: tests/testarea/lib/ufw/ufw-init start


274: tests/testarea/lib/ufw/ufw-init stop


275: enable


276: route delete allow 23/tcp


277: logging low


278: disable


Delete by number
Setting IPV6 to yes
279: disable


280: enable


281: route allow 1


282: route allow 2


283: route allow 3


284: route allow 4


### tuple ### route:allow any 1 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 1 -j ACCEPT
-A ufw-user-forward -p udp --dport 1 -j ACCEPT
--
### tuple ### route:allow any 2 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 2 -j ACCEPT
-A ufw-user-forward -p udp --dport 2 -j ACCEPT
--
### tuple ### route:allow any 3 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 3 -j ACCEPT
-A ufw-user-forward -p udp --dport 3 -j ACCEPT
--
### tuple ### route:allow any 4 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 4 -j ACCEPT
-A ufw-user-forward -p udp --dport 4 -j ACCEPT
### tuple ### route:allow any 1 ::/0 any ::/0 in
-A ufw6-user-forward -p tcp --dport 1 -j ACCEPT
-A ufw6-user-forward -p udp --dport 1 -j ACCEPT
--
### tuple ### route:allow any 2 ::/0 any ::/0 in
-A ufw6-user-forward -p tcp --dport 2 -j ACCEPT
-A ufw6-user-forward -p udp --dport 2 -j ACCEPT
--
### tuple ### route:allow any 3 ::/0 any ::/0 in
-A ufw6-user-forward -p tcp --dport 3 -j ACCEPT
-A ufw6-user-forward -p udp --dport 3 -j ACCEPT
--
### tuple ### route:allow any 4 ::/0 any ::/0 in
-A ufw6-user-forward -p tcp --dport 4 -j ACCEPT
-A ufw6-user-forward -p udp --dport 4 -j ACCEPT
285: --force delete 8


### tuple ### route:allow any 1 ::/0 any ::/0 in
-A ufw6-user-forward -p tcp --dport 1 -j ACCEPT
-A ufw6-user-forward -p udp --dport 1 -j ACCEPT
--
### tuple ### route:allow any 2 ::/0 any ::/0 in
-A ufw6-user-forward -p tcp --dport 2 -j ACCEPT
-A ufw6-user-forward -p udp --dport 2 -j ACCEPT
--
### tuple ### route:allow any 3 ::/0 any ::/0 in
-A ufw6-user-forward -p tcp --dport 3 -j ACCEPT
-A ufw6-user-forward -p udp --dport 3 -j ACCEPT
286: --force delete 4


### tuple ### route:allow any 1 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 1 -j ACCEPT
-A ufw-user-forward -p udp --dport 1 -j ACCEPT
--
### tuple ### route:allow any 2 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 2 -j ACCEPT
-A ufw-user-forward -p udp --dport 2 -j ACCEPT
--
### tuple ### route:allow any 3 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 3 -j ACCEPT
-A ufw-user-forward -p udp --dport 3 -j ACCEPT
287: --force delete 6


### tuple ### route:allow any 1 ::/0 any ::/0 in
-A ufw6-user-forward -p tcp --dport 1 -j ACCEPT
-A ufw6-user-forward -p udp --dport 1 -j ACCEPT
--
### tuple ### route:allow any 2 ::/0 any ::/0 in
-A ufw6-user-forward -p tcp --dport 2 -j ACCEPT
-A ufw6-user-forward -p udp --dport 2 -j ACCEPT
288: --force delete 3


### tuple ### route:allow any 1 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 1 -j ACCEPT
-A ufw-user-forward -p udp --dport 1 -j ACCEPT
--
### tuple ### route:allow any 2 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 2 -j ACCEPT
-A ufw-user-forward -p udp --dport 2 -j ACCEPT
289: --force delete 4


### tuple ### route:allow any 1 ::/0 any ::/0 in
-A ufw6-user-forward -p tcp --dport 1 -j ACCEPT
-A ufw6-user-forward -p udp --dport 1 -j ACCEPT
290: --force delete 2


### tuple ### route:allow any 1 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 1 -j ACCEPT
-A ufw-user-forward -p udp --dport 1 -j ACCEPT
291: --force delete 2


292: --force delete 1


Setting IPV6 to no
293: disable


294: enable


295: route allow 1


296: route allow 2


297: route allow 3


298: route allow 4


### tuple ### route:allow any 1 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 1 -j ACCEPT
-A ufw-user-forward -p udp --dport 1 -j ACCEPT
--
### tuple ### route:allow any 2 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 2 -j ACCEPT
-A ufw-user-forward -p udp --dport 2 -j ACCEPT
--
### tuple ### route:allow any 3 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 3 -j ACCEPT
-A ufw-user-forward -p udp --dport 3 -j ACCEPT
--
### tuple ### route:allow any 4 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 4 -j ACCEPT
-A ufw-user-forward -p udp --dport 4 -j ACCEPT
299: --force delete 4


### tuple ### route:allow any 1 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 1 -j ACCEPT
-A ufw-user-forward -p udp --dport 1 -j ACCEPT
--
### tuple ### route:allow any 2 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 2 -j ACCEPT
-A ufw-user-forward -p udp --dport 2 -j ACCEPT
--
### tuple ### route:allow any 3 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 3 -j ACCEPT
-A ufw-user-forward -p udp --dport 3 -j ACCEPT
300: --force delete 3


### tuple ### route:allow any 1 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 1 -j ACCEPT
-A ufw-user-forward -p udp --dport 1 -j ACCEPT
--
### tuple ### route:allow any 2 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 2 -j ACCEPT
-A ufw-user-forward -p udp --dport 2 -j ACCEPT
301: --force delete 2


### tuple ### route:allow any 1 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-forward -p tcp --dport 1 -j ACCEPT
-A ufw-user-forward -p udp --dport 1 -j ACCEPT
302: --force delete 1


Show added
Setting IPV6 to yes
303: disable


304: enable


305: route limit 22/tcp


306: route allow in on fake0 to 2001::211:aaaa:bbbb:d54c port 123 proto tcp


307: route deny Samba


308: show added
WARN: Checks disabled
Added user rules (see 'ufw status' for running firewall):
ufw route limit 22/tcp
ufw route deny Samba
ufw route allow in on fake0 to 2001::211:aaaa:bbbb:d54c port 123 proto tcp


309: route delete limit 22/tcp


310: route delete allow in on fake0 to 2001::211:aaaa:bbbb:d54c port 123 proto tcp


311: route delete deny Samba


312: show added
WARN: Checks disabled
Added user rules (see 'ufw status' for running firewall):
(None)


Setting IPV6 to no
313: disable


314: enable


315: route limit 22/tcp


316: route deny Samba


317: show added
WARN: Checks disabled
Added user rules (see 'ufw status' for running firewall):
ufw route limit 22/tcp
ufw route deny Samba


318: route delete limit 22/tcp


319: route delete deny Samba


320: show added
WARN: Checks disabled
Added user rules (see 'ufw status' for running firewall):
(None)


321: disable


Checking status
Setting IPV6 to yes
Running: sysctl -w net.ipv4.ip_forward=0
Running: sysctl -w net.ipv6.conf.default.forwarding=0
Running: sysctl -w net.ipv6.conf.all.forwarding=0
322: disable


323: default allow routed
WARN: Checks disabled
Default routed policy changed to 'allow'
(be sure to update your rules accordingly)


324: enable


325: status verbose
WARN: Checks disabled
Status: active
Logging: on (low)
Default: deny (incoming), allow (outgoing), disabled (routed)
New profiles: skip


Running: sysctl -w net.ipv4.ip_forward=1
Running: sysctl -w net.ipv6.conf.default.forwarding=1
Running: sysctl -w net.ipv6.conf.all.forwarding=1
326: disable


327: default allow routed
WARN: Checks disabled
Default routed policy changed to 'allow'
(be sure to update your rules accordingly)


328: enable


329: status verbose
WARN: Checks disabled
Status: active
Logging: on (low)
Default: deny (incoming), allow (outgoing), allow (routed)
New profiles: skip


Setting IPV6 to no
Running: sysctl -w net.ipv4.ip_forward=0
330: disable


331: default allow routed
WARN: Checks disabled
Default routed policy changed to 'allow'
(be sure to update your rules accordingly)


332: enable


333: status verbose
WARN: Checks disabled
Status: active
Logging: on (low)
Default: deny (incoming), allow (outgoing), disabled (routed)
New profiles: skip


Running: sysctl -w net.ipv4.ip_forward=1
334: disable


335: default allow routed
WARN: Checks disabled
Default routed policy changed to 'allow'
(be sure to update your rules accordingly)


336: enable


337: status verbose
WARN: Checks disabled
Status: active
Logging: on (low)
Default: deny (incoming), allow (outgoing), allow (routed)
New profiles: skip


Setting IPV6 to yes
Running: sysctl -w net.ipv4.ip_forward=0
Running: sysctl -w net.ipv6.conf.default.forwarding=0
Running: sysctl -w net.ipv6.conf.all.forwarding=0
338: disable


339: default deny routed
WARN: Checks disabled
Default routed policy changed to 'deny'
(be sure to update your rules accordingly)


340: enable


341: status verbose
WARN: Checks disabled
Status: active
Logging: on (low)
Default: deny (incoming), allow (outgoing), disabled (routed)
New profiles: skip


Running: sysctl -w net.ipv4.ip_forward=1
Running: sysctl -w net.ipv6.conf.default.forwarding=1
Running: sysctl -w net.ipv6.conf.all.forwarding=1
342: disable


343: default deny routed
WARN: Checks disabled
Default routed policy changed to 'deny'
(be sure to update your rules accordingly)


344: enable


345: status verbose
WARN: Checks disabled
Status: active
Logging: on (low)
Default: deny (incoming), allow (outgoing), deny (routed)
New profiles: skip


Setting IPV6 to no
Running: sysctl -w net.ipv4.ip_forward=0
346: disable


347: default deny routed
WARN: Checks disabled
Default routed policy changed to 'deny'
(be sure to update your rules accordingly)


348: enable


349: status verbose
WARN: Checks disabled
Status: active
Logging: on (low)
Default: deny (incoming), allow (outgoing), disabled (routed)
New profiles: skip


Running: sysctl -w net.ipv4.ip_forward=1
350: disable


351: default deny routed
WARN: Checks disabled
Default routed policy changed to 'deny'
(be sure to update your rules accordingly)


352: enable


353: status verbose
WARN: Checks disabled
Status: active
Logging: on (low)
Default: deny (incoming), allow (outgoing), deny (routed)
New profiles: skip


Setting IPV6 to yes
Running: sysctl -w net.ipv4.ip_forward=0
Running: sysctl -w net.ipv6.conf.default.forwarding=0
Running: sysctl -w net.ipv6.conf.all.forwarding=0
354: disable


355: default reject routed
WARN: Checks disabled
Default routed policy changed to 'reject'
(be sure to update your rules accordingly)


356: enable


357: status verbose
WARN: Checks disabled
Status: active
Logging: on (low)
Default: deny (incoming), allow (outgoing), disabled (routed)
New profiles: skip


Running: sysctl -w net.ipv4.ip_forward=1
Running: sysctl -w net.ipv6.conf.default.forwarding=1
Running: sysctl -w net.ipv6.conf.all.forwarding=1
358: disable


359: default reject routed
WARN: Checks disabled
Default routed policy changed to 'reject'
(be sure to update your rules accordingly)


360: enable


361: status verbose
WARN: Checks disabled
Status: active
Logging: on (low)
Default: deny (incoming), allow (outgoing), reject (routed)
New profiles: skip


Setting IPV6 to no
Running: sysctl -w net.ipv4.ip_forward=0
362: disable


363: default reject routed
WARN: Checks disabled
Default routed policy changed to 'reject'
(be sure to update your rules accordingly)


364: enable


365: status verbose
WARN: Checks disabled
Status: active
Logging: on (low)
Default: deny (incoming), allow (outgoing), disabled (routed)
New profiles: skip


Running: sysctl -w net.ipv4.ip_forward=1
366: disable


367: default reject routed
WARN: Checks disabled
Default routed policy changed to 'reject'
(be sure to update your rules accordingly)


368: enable


369: status verbose
WARN: Checks disabled
Status: active
Logging: on (low)
Default: deny (incoming), allow (outgoing), reject (routed)
New profiles: skip


370: disable
